# AgenticCustoms

./: .dockerignore  .env.example  .gitattributes  .gitignore  Dockerfile  README.md  docker-compose.yml
backend/: docker-entrypoint.sh  main.py  pyproject.toml  requirements.txt  test_output.txt
backend/agents/: __init__.py  base.py
backend/agents/chat/: agent.py
backend/agents/compliance_checker/: __init__.py  agent.py
backend/agents/doc_generator/: __init__.py  agent.py
backend/agents/hs_classifier/: __init__.py  agent.py
backend/agents/origin_matcher/: __init__.py  agent.py
backend/agents/tariff_calculator/: __init__.py  agent.py
backend/api/: __init__.py  deps.py
backend/api/routes/: auth.py  chat.py  classify.py  compliance.py  history.py  ocr.py  pages.py  pipeline.py  report.py  stats.py  tariff.py
backend/data/: __init__.py  database.py  import_china.py  import_sanctions.py  import_usa.py  models.py
backend/data/db/: __init__.py  database.py  models.py
backend/data/raw/: 2026年 中华人民共和国海关进出口税则(1).txt  hscode2026.xlsx  hts_2026_revision_9_csv.csv
backend/domain/: __init__.py  commodity.py  compliance_result.py  declaration_doc.py  enums.py  hs_code.py  origin_result.py  tariff_result.py
backend/orchestration/: __init__.py  graph.py  state.py
backend/rag/: __init__.py  embedding.py  retriever.py  seed.py  vector_store.py
backend/shared/: __init__.py  config.py  constants.py  errors.py  llm.py  logger.py
backend/tests/: manual_test_cases.md  test_agents.py  test_api.py  test_data.py  test_domain.py  test_errors.py
项目需求/: demo.html  (+1 more)
(+47 files in other folders)
