[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "agentic-customs"
version = "0.1.0"
description = "基于Agentic RAG与多智能体协作的跨境合规贸易与关税智能申报平台"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "pydantic>=2.0,<3.0",
    "pydantic-settings>=2.0,<3.0",
    "sqlalchemy[asyncio]>=2.0,<3.0",
    "asyncmy>=0.2.9",
    "chromadb>=0.5.0,<2.0",
    "langchain>=1.0,<2.0",
    "langgraph>=1.0,<2.0",
    "dashscope>=1.17.0,<2.0",
    "sentence-transformers>=3.0.0,<6.0",
    "structlog>=24.0,<27.0",
    "httpx>=0.27.0,<1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "ruff>=0.4.0,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["domain*", "shared*", "data*", "rag*", "agents*", "orchestration*", "api*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
